Fix build: add cross-env and update build script for Node.js compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,5 @@
   "framework": "gatsby",
   "buildCommand": "yarn build",
   "outputDirectory": "public",
-  "installCommand": "yarn install",
-  "env": {
-    "NODE_OPTIONS": "--openssl-legacy-provider"
-  }
+  "installCommand": "yarn install"
 }
