--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "browserslist": "> 0.25%, not dead",
   "scripts": {
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
