--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,17 @@
 {
   "framework": "gatsby",
-  "buildCommand": "yarn build",
+  "buildCommand": "yarn build:vercel",
   "outputDirectory": "public",
-  "installCommand": "yarn install"
+  "installCommand": "yarn install",
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs16.x"
+    }
+  },
+  "build": {
+    "env": {
+      "NODE_VERSION": "16",
+      "NODE_OPTIONS": "--openssl-legacy-provider"
+    }
+  }
 }
