--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": "16.20.2"
+    "node": ">=16.0.0"
   },
   "browserslist": "> 0.25%, not dead",
   "scripts": {
     "build": "gatsby build",
-    "build:vercel": "cross-env NODE_VERSION=16.20.2 NODE_OPTIONS=--openssl-legacy-provider gatsby build",
+    "build:vercel": "cross-env NODE_VERSION=18 NODE_OPTIONS=--openssl-legacy-provider gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
