--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "installCommand": "yarn install",
   "build": {
     "env": {
-      "NODE_VERSION": "16.20.2",
+      "NODE_VERSION": "18.x",
       "NODE_OPTIONS": "--openssl-legacy-provider"
     }
   }
