--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,25 @@
 {
-  "framework": "gatsby",
-  "buildCommand": "yarn build:vercel",
-  "outputDirectory": "public",
-  "installCommand": "yarn install --ignore-engines",
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "public"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "^/(.*)",
+      "dest": "/",
+      "status": 200
+    }
+  ],
   "build": {
     "env": {
       "NODE_VERSION": "18",
       "NODE_OPTIONS": "--openssl-legacy-provider"
     }
-  },
-  "routes": [
-    {
-      "src": "^/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "^/.*",
-      "dest": "/index.html"
-    }
-  ]
+  }
 }
