--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "assert": "^2.1.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-styled-components": "^1.12.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
@@ -93,6 +94,7 @@
     "gatsby-remark-code-titles": "^1.1.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.1.2",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "sharp": "^0.34.5"
   }
 }
