--- a/vercel.json
+++ b/vercel.json
@@ -11,9 +11,19 @@
   ],
   "routes": [
     {
-      "src": "^/(.*)",
-      "dest": "/",
-      "status": 200
+      "src": "/static/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/page-data/(.*)",
+      "headers": { "cache-control": "public, max-age=0, must-revalidate" },
+      "dest": "/page-data/$1"
+    },
+    {
+      "src": "/(.*)",
+      "headers": { "cache-control": "public, max-age=0, must-revalidate" },
+      "dest": "/$1"
     }
   ],
   "build": {
