--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": "20.x"
+    "node": ">=18.0.0"
   },
   "vercel": {
     "env": {
-      "NODE_VERSION": "20",
+      "NODE_VERSION": "18",
       "NODE_OPTIONS": "--openssl-legacy-provider"
     }
   },
   "browserslist": "> 0.25%, not dead",
   "scripts": {
     "build": "gatsby clean && gatsby build",
-    "build:vercel": "cross-env NODE_VERSION=18 NODE_OPTIONS=--openssl-legacy-provider gatsby build",
+    "build:vercel": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
@@ -54,24 +54,24 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^17.2.3",
-    "gatsby": "^3.4.1",
-    "gatsby-plugin-google-analytics": "^3.4.0",
-    "gatsby-plugin-image": "^1.4.0",
-    "gatsby-plugin-manifest": "^3.4.0",
-    "gatsby-plugin-netlify": "^3.4.0",
-    "gatsby-plugin-offline": "^4.4.0",
-    "gatsby-plugin-react-helmet": "^4.4.0",
-    "gatsby-plugin-robots-txt": "1.6.14",
-    "gatsby-plugin-sharp": "^3.4.1",
-    "gatsby-plugin-sitemap": "^4.0.0",
-    "gatsby-plugin-styled-components": "^4.4.0",
-    "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^5.1.0",
-    "gatsby-remark-prismjs": "^5.1.0",
-    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby": "^5.11.0",
+    "gatsby-plugin-google-analytics": "^4.24.0",
+    "gatsby-plugin-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^5.11.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-offline": "^6.11.0",
+    "gatsby-plugin-react-helmet": "^6.11.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.11.0",
+    "gatsby-plugin-sitemap": "^6.11.0",
+    "gatsby-plugin-styled-components": "^6.11.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^8.11.0",
+    "gatsby-remark-prismjs": "^7.11.0",
+    "gatsby-source-filesystem": "^5.11.0",
     "gatsby-source-github-api": "^1.0.0",
-    "gatsby-transformer-remark": "^4.1.0",
-    "gatsby-transformer-sharp": "^3.4.0",
+    "gatsby-transformer-remark": "^6.11.0",
+    "gatsby-transformer-sharp": "^5.11.0",
     "lodash": "^4.17.19",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -88,21 +88,23 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/eslint-parser": "^7.13.14",
-    "@babel/preset-react": "^7.13.13",
+    "@babel/core": "^7.22.0",
+    "@babel/eslint-parser": "^7.22.0",
+    "@babel/preset-react": "^7.22.0",
     "@upstatement/eslint-config": "^1.0.0",
     "@upstatement/prettier-config": "^1.0.0",
-    "babel-preset-gatsby": "^1.4.0",
-    "cross-env": "7.0.3",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
+    "babel-preset-gatsby": "^3.11.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.0",
     "gatsby-remark-code-titles": "^1.1.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.1.2",
-    "prettier": "^2.2.1",
-    "sharp": "^0.34.5"
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.0"
   }
 }
