--- a/package.json
+++ b/package.json
@@ -17,16 +17,10 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "vercel": {
-    "env": {
-      "NODE_VERSION": "18",
-      "NODE_OPTIONS": "--openssl-legacy-provider"
-    }
-  },
   "browserslist": "> 0.25%, not dead",
   "scripts": {
     "build": "gatsby clean && gatsby build",
-    "build:vercel": "gatsby build",
+    "build:vercel": "cross-env NODE_VERSION=18 NODE_OPTIONS=--openssl-legacy-provider gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
@@ -47,6 +41,7 @@
     "graphql": "^14.7.0"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "animejs": "^3.1.0",
     "assert": "^2.1.0",
     "babel-plugin-lodash": "^3.3.4",
@@ -54,32 +49,32 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^17.2.3",
-    "gatsby": "^5.11.0",
-    "gatsby-plugin-google-gtag": "^5.13.0",
-    "gatsby-plugin-image": "^3.11.0",
-    "gatsby-plugin-manifest": "^5.11.0",
+    "gatsby": "^5.12.1",
+    "gatsby-plugin-google-analytics": "^5.12.0",
+    "gatsby-plugin-image": "^3.12.1",
+    "gatsby-plugin-manifest": "^5.12.1",
     "gatsby-plugin-netlify": "^5.1.0",
-    "gatsby-plugin-offline": "^6.11.0",
-    "gatsby-plugin-react-helmet": "^6.11.0",
+    "gatsby-plugin-offline": "^6.12.1",
+    "gatsby-plugin-react-helmet": "^6.12.1",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.11.0",
-    "gatsby-plugin-sitemap": "^6.11.0",
-    "gatsby-plugin-styled-components": "^6.11.0",
+    "gatsby-plugin-sharp": "^5.12.1",
+    "gatsby-plugin-sitemap": "^6.12.1",
+    "gatsby-plugin-styled-components": "^6.12.1",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^8.11.0",
-    "gatsby-remark-prismjs": "^7.11.0",
-    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-remark-images": "5.12.0",
+    "gatsby-remark-prismjs": "^7.12.1",
+    "gatsby-source-filesystem": "^5.12.1",
     "gatsby-source-github-api": "^1.0.0",
-    "gatsby-transformer-remark": "^6.11.0",
-    "gatsby-transformer-sharp": "^5.11.0",
+    "gatsby-transformer-remark": "^6.12.1",
+    "gatsby-transformer-sharp": "^5.12.1",
     "lodash": "^4.17.19",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.27.0",
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.3.0",
     "scrollreveal": "^4.0.5",
@@ -88,23 +83,21 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.0",
-    "@babel/eslint-parser": "^7.22.0",
-    "@babel/preset-react": "^7.22.0",
+    "@babel/core": "^7.23.5",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
     "@upstatement/eslint-config": "^1.0.0",
     "@upstatement/prettier-config": "^1.0.0",
-    "babel-preset-gatsby": "^3.11.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.0",
+    "babel-preset-gatsby": "^3.14.0",
+    "cross-env": "7.0.3",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
     "gatsby-remark-code-titles": "^1.1.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.0",
-    "prettier": "^2.8.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sharp": "^0.32.0"
+    "husky": "^6.0.0",
+    "lint-staged": "^10.1.2",
+    "prettier": "^3.1.1",
+    "sharp": "^0.32.6"
   }
 }
