--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "vercel-build": "gatsby clean && gatsby build"
   },
   "lint-staged": {
     "*.{js,css,json,md}": [
