--- a/package.json
+++ b/package.json
@@ -38,9 +38,6 @@
       "eslint --fix"
     ]
   },
-  "resolutions": {
-    "graphql": "^14.7.0"
-  },
   "dependencies": {
     "ajv": "^8.17.1",
     "animejs": "^3.1.0",
@@ -62,7 +59,7 @@
     "gatsby-plugin-sitemap": "^6.12.1",
     "gatsby-plugin-styled-components": "^6.12.1",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "5.12.0",
+    "gatsby-remark-images": "^7.12.1",
     "gatsby-remark-prismjs": "^7.12.1",
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-source-github-api": "^1.0.0",
@@ -87,8 +84,6 @@
     "@babel/core": "^7.23.5",
     "@babel/eslint-parser": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
-    "@upstatement/eslint-config": "^1.0.0",
-    "@upstatement/prettier-config": "^1.0.0",
     "babel-preset-gatsby": "^3.14.0",
     "cross-env": "7.0.3",
     "eslint": "^8.56.0",
